# osplan

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  bootstrap  config.h  configure  configure.ac  make_fake_glibc.sh
core/: osplan.core.c  parse_yml.h  vrg.h
glibc-lite/: byteswap.h  endian.h  stdint.h
glibc-lite/sys/: endian.h
modules/coreutils86/: Makefile  reboot.c  shell.c
osplan/EFI/: Makefile  miniboot86.asm  shell.c  userland.c
osplan/src/: Makefile  Makefile.am  Makefile.in  args.c  args.h  imagegen.c  imagegen.h  osplan.h  xgcc_shell.c
osplan/src/.deps/: osplan-args.Po  osplan-imagegen.Po  osplan-main.Po  osplan-osplan.Po  osplan-xgcc_shell.Po
tools/: x86_64-elf-tcc
